WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295333
AVVideoCaptureSource first frames check is not always correct on restart
https://bugs.webkit.org/show_bug.cgi?id=295333
Summary
AVVideoCaptureSource first frames check is not always correct on restart
youenn fablet
Reported
2025-07-02 06:27:06 PDT
AVVideoCaptureSource first frames check is not always correct on restart
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2025-07-02 06:29:28 PDT
<
rdar://122102805
>
youenn fablet
Comment 2
2025-07-02 06:33:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47485
EWS
Comment 3
2025-07-03 01:25:44 PDT
Committed
296960@main
(23fe8add2e30): <
https://commits.webkit.org/296960@main
> Reviewed commits have been landed. Closing PR #47485 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug