Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h
@@ -200,7 +200,7 @@ private:
     std::unique_ptr<Timer> m_startupTimer;
 #endif
     std::unique_ptr<Timer> m_verifyCapturingTimer;
-    uint64_t m_framesCount { 0 };
+    std::atomic<uint64_t> m_framesCount { 0 };
     uint64_t m_lastFramesCount { 0 };
     int64_t m_defaultTorchMode { 0 };
     OptionSet<RealtimeMediaSourceSettings::Flag> m_pendingSettingsChanges;
